	  (display): Use decompress_open/decompress_fdopen rather than older
	  decompression methods.
	  (display_filesystem, display_database): Drop remove_ztemp calls.
	* src/straycats.c (check_for_stray): Use decompression layer.
	  Rearrange control flow a bit to reduce duplication.
	* src/ult_src.c (ult_src): Use pipeline and decompression layers
	  rather than older decompression methods.

	* configure.ac: Remove decompressor variable. Check for gzopen in
	  libz.
	* include/manconfig.h.in (DECOMPRESSOR): Remove.
	  (comp_list): Declare extern here.
	  (decompress, remove_ztemp, get_ztemp): Remove.
	* src/man_db.conf.in (decompressor): Remove.

	* docs/TODO: Update.

Tue Aug 28 10:36:20 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/straycats.c (check_for_stray): Drop privileges while opening
	  temporary file (previously created with dropped privileges).

Tue Aug 28 10:31:03 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/straycats.c (straycats): Regain privileges on the error path
	  too.

Mon Aug 27 20:13:09 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/compression.c (comp_file): Free compfile if returning NULL.

Mon Aug 27 20:02:17 BST 2007  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_wait): Re-raise SIGINT or SIGQUIT if they
	  terminate a subprocess.

Mon Aug 27 19:58:19 BST 2007  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_wait): Return 1 if we fail to close the
	  pipeline's output.

Sun Aug 26 23:33:23 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (format_display): Check whether format_cmd is NULL
	  before discarding stderr from it.

Sun Aug 26 21:20:45 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (checked_popen): Remove unnecessary SECURE_MAN_UID
	  guard; drop_effective_privs/regain_effective_privs already check
	  this.
	* src/security.c (remove_with_dropped_privs): Likewise. The uid !=
	  ruid check is no longer necessary now that